# fincrime-secured-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: evals-nightly.yml  evals.yml  pages.yml
claude_code_plugin/: .mcp.json  README.md
claude_code_plugin/.claude-plugin/: plugin.json
claude_code_plugin/commands/: fraud-audit-trail.md  fraud-investigate.md  fraud-stack-up.md
claude_code_plugin/servers/: fraud_mcp_proxy.py
config/: rbac.yaml
docs/: adding-a-data-source.md  agent-testing.md  docs.html  index.html  launch-post.md  threat-model.md
docs/adr/: 0001-headless-cowork-harness.md  0002-paseto-over-jwt.md  0003-yaml-rbac.md  0004-sqlite-default-audit.md  0005-fastmcp-framework.md  0006-annotate-not-block-verifier.md  0007-opus-default-model.md  README.md
docs/assets/: README.md
evals/: CLAUDE.md  __init__.py  run.py  validate.py
evals/datasets/: __init__.py  account_takeover.yaml  clean_customer.yaml  mule_account.yaml  sanctions_hit.yaml  schema.py  structuring.yaml  (+1 more)
gateways/: __init__.py
mcp_servers/: __init__.py  _common.py
mock_apis/: __init__.py
plugin/: CLAUDE.md  __init__.py  loader.py  plugin.json  register.py
scripts/: audit_tail.py  gen_dev_keys.py  load_fixtures.py  seed_audit_demo.py
tests/: __init__.py  conftest.py  test_adding_a_data_source.py  test_adr_index.py  test_audit.py  test_auth_gateway.py  test_case_actions_mcp_server.py  test_case_actions_mock.py  test_customer_data_mcp_server.py  test_customer_data_mock.py  test_docker_compose.py  test_eval_dataset_schema.py  test_eval_runner.py  test_gen_dev_keys.py  test_grafana_dashboard.py  test_harness.py  test_kyc_mcp_server.py  test_kyc_mock.py  test_load_fixtures.py  test_mcp_gateway.py  test_mock_oidc.py  test_osint_mcp_server.py  test_osint_mock.py  test_otel.py  test_paseto.py  test_plugin_bundle.py  test_rbac.py  test_readme_and_launch_post.py  test_sanctions_mcp_server.py  test_sanctions_mock.py  test_scaffold.py  test_scorers_llm.py  test_scorers_tool.py  test_threat_model.py  test_transactions_mcp_server.py  test_transactions_mock.py
(+80 files in other folders)
