[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-copilot-oss"
version = "0.1.0"
description = "Open-source agentic fraud-investigation copilot (Cowork plugin + MCP gateway + federated MCP servers)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Iceberg Security", email = "amit@icebergsecurity.ai" },
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "fastmcp>=0.2",
    "pyseto>=1.7",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
]

[project.optional-dependencies]
clickhouse = [
    "clickhouse-connect>=0.7",
]
# Anthropic SDK only required for the production LLM-judge scorers
# (US-028). Tests inject a fake judge via the `Judge` Protocol, so the
# SDK is optional — install with `pip install fraud-copilot-oss[evals]`
# to run the live judge against the real API.
evals = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "gateways*",
    "mcp_servers*",
    "mock_apis*",
    "evals*",
]
exclude = [
    "tests*",
    "docs*",
    "config*",
    "plugin*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "\\.venv/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
